--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,18 @@
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--            <version>2.3.3.RELEASE</version>-->
 <!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.0.10.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
